--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Simple Web Application</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8.0_251</java.version>
 	</properties>
 
 	<dependencies>
